--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,22 +1,18 @@
-<div>
-    <div style="margin-left: 250px" class="row">
-        <div class="col-4">
-            <h2>フェス検索</h2>
-        <table class="table-borderless">
-            <%= search_form_for @q, url: community_search_path do |f| %>
-            <tr>
-                <div class='input-group'>
-                  <div class="mb-5">
-                      <h5>ワード検索</h5>　<%= f.search_field :fes_name_cont,
-                               class: 'form-control',
-                               placeholder: 'フェス名',
-                               type: 'search' %>
-              <div class='input-group-append'>
-                <%= f.submit class: 'btn btn-primary' %>
-             </div>
+<div style="margin-left: 250px" class="row">
+  <div class="col-4">
+    <h2>フェス検索</h2>
+      <table class="table-borderless">
+        <%= search_form_for @q, url: community_search_path do |f| %>
+          <tr>
+            <div class='input-group'>
+              <div class="mb-5">
+                <b>ワード検索</b><%= f.search_field :fes_name_cont, class: 'form-control', placeholder: 'フェス名', type: 'search' %>
+                  <div class='input-group-append'>
+                    <%= f.submit class: 'btn btn-primary' %>
                   </div>
+              </div>
             </div>
-            </tr>
+          </tr>
         <% end %>
 
         <%= form_with url: community_search_path, method: :get, local: true do |f| %>
@@ -36,22 +32,22 @@
               <td><%= f.submit "検索", class: 'btn btn-success' %></td>
             </tr>
             <% end %>
-        </table>
-        </div>
+      </table>
+  </div>
 
-    <div class="col-8">
-        <div style="width: 500px;">
-          <h2>フェス検索結果</h2>
-            <div class="table-borderless">
-              <% @communities.each do |community| %>
-                <div class="mb-2">
-                  <%= community.fes_name %>
-                  <div class="text-right">
-                    <%= link_to  'コミュニティ', community_path(community.id), class: 'btn btn-info' %>
-                  </div>
+  <div class="col-8">
+    <div style="width: 500px;">
+      <h2>フェス検索結果</h2>
+        <div class="table-borderless">
+          <% @communities.each do |community| %>
+            <div class="mb-2">
+              <%= community.fes_name %>
+                <div class="text-right">
+                  <%= link_to  'コミュニティ', community_path(community.id), class: 'btn btn-info' %>
                 </div>
-              <% end %>
-           </div>
+            </div>
+          <% end %>
         </div>
     </div>
+  </div>
 </div>
