--- a/app/views/public/communities/show.html.erb
+++ b/app/views/public/communities/show.html.erb
@@ -1,4 +1,3 @@
-
 <div class="container">
   <div class="row">
     <div class="col-md-6 mx-auto">
@@ -15,9 +14,9 @@
 <%= form_with(model: @comment, local:true) do |f| %>
     <div class="form-group">
         <p>
-            <%= f.label 'コメント(255文字未満)' %>
-            <%= f.text_area :comment,class: 'form-control' %>
-            <%= f.hidden_field :community_id, value: @community.id %>
+          <b><%= f.label 'コメント' %></b>
+          <%= f.text_area :comment,class: 'form-control' %>
+          <%= f.hidden_field :community_id, value: @community.id %>
         </p>
     </div>
     <div class="form_action row">
