--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -44,7 +44,7 @@
         </div>
     </div>
 
-    <div class="col-4">
+    <div class="col-5">
       <div class="text-center">
         <p><h2>お気に入りフェス</h2></p>
           <div class="p-4">
@@ -55,26 +55,30 @@
       </div>
     </div>
 
-    <div class="col-6">
+    <div class="col-5">
       <div class="text-center">
         <p><h2>いいね履歴</h2></p>
       　<% @goods.each do |good| %>
           <div class="mb-2">
-            <%= link_to communities_path(good.comment.user_id) do %>
-              <%= image_tag good.comment.user.get_profile_image(100,100) %>
-            <% end %>
-            <%= good.comment.user.nickname %>
-            <%= good.comment.community.fes_name %>
-            <%= good.comment.comment %>
-            <%= good.comment.created_at %>
+            <tr>
+              <td>
+                <%= link_to communities_path(good.comment.user_id) do %>
+                <%= image_tag good.comment.user.get_profile_image(100,100) %>
+                <% end %>
+                <p><%= good.comment.user.nickname %></p>
+                <tr><b><%= good.comment.community.fes_name %></b></tr>
+                <p><%= good.comment.comment %></p>
+              </td>
+            <%= good.comment.created_at.to_s(:datetime_jp) %>
+            </tr>
           </div>
         <% end %>
-        </div>
-        <div class="p-3">
-          <div class="text-right">
+      </div>
+      <div class="p-3">
+        <div class="text-right">
           <p>最新５件まで表示</p><%= link_to '全てのいいねを見る', users_good_path, class: "btn btn-success" %>
         </div>
-        </div>
+      </div>
     </div>
   </div>
 </div>
