fix image_path top_icon

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
         <div class="wrapper site-header__wrapper top">
           <nav class="navber navber-expand-lg" style="background-color: #000000">
               <%= link_to root_path, class: "navber-brand" do %>
-               <div class="ml-3 mt-3" style="width: 210px;"><i class="fa-regular fa-cake-slice"></i><h2><%= image_tag '/logo/logo.jpg', size: '210x38' %></h2></div>
+               <div class="ml-3 mt-3" style="width: 210px;"><i class="fa-regular fa-cake-slice"></i><h2><%= image_tag 'logo/logo.jpg', size: '210x38' %></h2></div>
                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation" style="display: inline-block;">
 
